# transmission

./: .clang-format  .gitattributes  .gitmodules  AGENTS.md  AUTHORS  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING  README.md  code_style.sh  update-version-h.sh
.github/: CACHE_POLICY.md  pull_request_template.md
Transmission.xcodeproj/: project.pbxproj
cli/: cli.cc  transmission-cli.1
cmake/: Findlibarchive.cmake  Findsimdutf.cmake  TrMacros.cmake
daemon/: daemon-posix.cc  daemon-win32.cc  daemon.cc  daemon.h  transmission-daemon.1
docs/: Bug-Submission.md  Building-Transmission.md  Editing-Configuration-Files.md  README.md  Scripts.md  Web-Interface.md  rpc-spec.md
gtk/: .clang-format  .clang-tidy  Actions.cc  Actions.h  Application.cc  CMakeLists.txt  DetailsDialog.cc  DetailsDialog.h  Dialogs.cc  DynamicPropertyStore.h  FaviconCache.cc  FileList.cc  FileList.h  FilterBar.cc  FilterBar.h  FilterBase.h  FilterBase.hh  FilterListModel.h  FilterListModel.hh  Flags.h  FreeSpaceLabel.cc  FreeSpaceLabel.h  GtkCompat.h  HigWorkarea.h  IconCache.cc  ListModelAdapter.cc  ListModelAdapter.h  Macros.h  MainWindow.cc  MakeDialog.cc  MakeDialog.h  MessageLogWindow.cc  MessageLogWindow.h  Notify.cc  Notify.h  OptionsDialog.cc  OptionsDialog.h  PathButton.cc  PathButton.h  Prefs.cc  (+29 more)
libtransmission/: .clang-tidy  CMakeLists.txt  announce-list.cc  announce-list.h  announcer-common.h  announcer-http.cc  announcer-udp.cc  announcer.cc  announcer.h  api-compat.cc  api-compat.h  bandwidth.cc  bandwidth.h  benc.h  bitfield.cc  bitfield.h  block-info.cc  block-info.h  blocklist-download.cc  blocklist-download.h  blocklist.cc  blocklist.h  clients.cc  clients.h  completion.cc  completion.h  constants.h  converters.cc  converters.h  crypto-utils-ccrypto.cc  crypto-utils-fallback.cc  crypto-utils-mbedtls.cc  crypto-utils-openssl.cc  crypto-utils-wolfssl.cc  crypto-utils.cc  crypto-utils.h  env.cc  env.h  error-types.h  error.cc  (+144 more)
libtransmission-app/: .clang-tidy  CMakeLists.txt  app.cc  app.h  converters.cc  converters.h  display-modes.h  favicon-cache.h  prefs.cc  prefs.h  rpc-client.cc  rpc-client.h  rpc-queue.h  session.cc  session.h
macosx/: AboutWindowController.mm  Badger.mm  (+75 more)
tests/libtransmission-app/: CMakeLists.txt  converter-tests.cc  prefs-test.cc  rpc-client-test.cc  session-test.cc  test-fixtures.h
tests/utils/: CMakeLists.txt  remote-test.cc
(+280 files in other folders)
